- Changed ilSaveCHeader's second argument to char*.
- Changed ilutGLScreenie to use Unicode if needed.
- Fixed various Unicode problems with ilSetString.
- Added progressive saving of .jpg with IL_JPG_PROGRESSIVE flag.
- Added more to the Fortran wrapper.
- Fixed TIF loading/saving (#define LZW_SUPPORT not enabled in libtiff).
- Changed MSVC++ to use MSVCRT libraries again.

1.7.3
---
- ilGenImage now returns ILuint instead of ILint.
- Added pkgconfig devil.pc.
- Applied bugfixes from Richard Sims (mainly .psd).
- Added new Xcode framework.
- Added Fortran support.
- Changed MSVC++ 2005 project to link with static MSVCRT library.
- Added patch by SF user robin_charlton for Windows BMP support in ILUT.
- Updated Cmake files.
- Added preliminary Microsoft HD Photo support.
- Added better Unicode support.
- Changed .jp2 loading so that file streams can now be loaded.
- Changed limit/clamp in il.h to IL_LIMIT/IL_CLAMP.
- Added .hdr saving.
- Added Dutch/Spanish/Arabic/Japanese translations of error codes in ILU.
- Added ilut_directxm.c (DirectX Mobile support) from Vincent Richomme.
- Fixed a possible buffer overrun in iClipString.

1.7.2
---
- Added preliminary OpenEXR support.
- Fixed crash in ilSwapColours with images having bits-per-channel greater than 8.
- Fixed ilClearImage not clearing images properly with bpc greater than 8.
- Added MSVC++ 8 projects back.
- Added MSVC++ Unicode projects.

1.7.1
---
- Added Mac OS X .icns support
- Fixed a bug with non-standard .ico files that have PNG compression and palettes.
- Added JPEG 2000 support with JasPer.
- Added support for 256x256 and 512x512 JPEG 2000 encoded .icns.

1.7.0
---
- Fixed a windows padding problem with bitmaps (thanks to robin_charlton)
- Added ILUT-X11 thank's to Jesse Maurais patch
- fixed PNM loading problem if the image contained 0x20 (a gray) in the beginning of the image
- added internal asserts to check pedanticaly check consistency in debug builds
- fixed SSE3 check