@@ -19,7 +19,7 @@
 	#define HAVE_CONFIG_H
 #endif
 #ifdef HAVE_CONFIG_H
-#include <config.h>
+#include <IL/config.h>
 #endif
 
 // Standard headers
